--- a/index.html
+++ b/index.html
@@ -3,28 +3,56 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+    <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
 
     <style>
-      h2 {
-        color: red;
-        font-size: 60px;
-        background-color: blue;
+      body {
+        width: 700px;
+        margin: 0 auto;
+        font-family: 'PT Sans', sans-serif;
+        background-position: top center;
+        background-image: url(dc-online-media-mockup.jpg);
+        background-size: 800px 20624px;
+        background-repeat: no-repeat;
       }
 
-      h2 + p {
-        color: green;
+      h1, h2, h3 {
+        font-family: 'PT Sans Caption', sans-serif;
+        font-weight: bold;
       }
+
+      h1 {
+      font-size: 40px;
+      line-height: 46px;
+      margin-top: 66px;
+      }
+
+      h1+p {
+        font-family: 'PT Sans Caption', sans-serif;
+        font-size: 23px;
+        line-height: 32px;
+        color: rgba(0, 0, 0, .4);
+      }
+
+      p {
+        font-size: 23px;
+        line-height: 33px;
+        margin-top: -1px;
+      }
+
+      h2 {
+        margin-top: 37px;
+        font-size: 32px;
+        line-height: 51px;
+      }
+
     </style>
     </head>
   <body>
     <h1>Дом Наркомфина</h1>
     <p>Жилой дом переходного типа, построенный в <a target="_blank" href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4">1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87">Моисея Гинзбурга</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%B8%D0%BD%D0%B8%D1%81,_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D0%B8%D0%B9_%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D0%B5%D0%B2%D0%B8%D1%87">Игнатия Милиниса</a> для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B9_%D0%BA%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B0%D1%82_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)">конструктивизма</a>.</p>
     <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение».</p>
-
-
-
-  <div class="body_1">
-
 
     <h2>История создания</h2>
     <p>Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга, в соавторстве с архитектором Игнатием Милинисом и инженером Сергеем Прохоровым. Ранее, в конце 1925 года была образована творческая организация конструктивистов, названная <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Объединением современных архитекторов (ОСА)</a>. Эта организация оказала значительное влияние на развитие теоретической мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса.</p>
@@ -56,6 +84,7 @@
     <p>И наконец, в самой верхней части дома, на уровне плоской крыши, сделано несколько комнат типа общежития, где реализовны опубликованные Н. Милютиным в «Соцгороде» жилые ячейки на одного человека. Часть из них — на одного человека, часть — на двух. Между каждой парой комнат расположены душевая и умывальная комнаты.</p>
     <p>Здание включает в себя около десятка типов квартир, в том числе:</p>
 
+<!-- ul>ui*3 -->
     <ul>
       <li>Квартира типа F — основное количество жилых ячеек в доме минимального размера. В одни из них можно попасть из остекленной галереи или коридора, спускаясь по внутриквартирной лестнице в общую комнату, а в другие — поднимаясь в неё также по аналогичной лестнице.</li>
       <li>Квартира типа K — 8 квартир для больших семей располагались в центральной части дома между лестничными клетками. Квартиры представляли собой двухъярусные жилые ячейки высотой каждого этажа 2,3 метра, при этом часть квартиры имела высоту потолка 4,6 метра, и в ней находилась общая жилая комната, выполняющая функции гостиной. На нижнем ярусе были устроены коридор, передняя, терраса и кухня, а в верхнем — две спальни размером 19,9 и 12,1 м². Кроме открытой террасы на втором этаже, для отдыха на воздухе и принятия солнечных ванн была предназначена также плоская крыша с разбитым на ней цветником.</li>
