--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
         background-repeat: no-repeat;
       }
 
+      /*  Хак для вёрстки  */
+
+      /*h1,
+      h2,
+      h3,
+      h1 + p {
+        letter-spacing: -0.5px;
+      }*/
+
+      p {
+        letter-spacing: -0.05px;
+      }
+
+      /*  Конец хака  */
+
       h1, h2, h3 {
         font-family: 'PT Sans Caption', sans-serif;
         font-weight: bold;
@@ -29,7 +44,6 @@
       }
 
       h1 + p {
-        margin: 0;
         font-family: 'PT Sans Caption', sans-serif;
         font-size: 22px;
         line-height: 32px;
@@ -37,19 +51,39 @@
       }
 
       h2 {
-        margin-top: 39px;
+        margin-top: 43px;
         font-size: 32px;
-        line-height: 46px;
+        line-height: 36px;
       }
 
       h2 + p {
-        margin-top: 39px;
+        margin-top: 7px;
       }
 
-      p {
-        margin-top: 30px;
+      h3 {
+        margin-top: 36px;
+        font-size: 28px;
+        line-height: 34px;
+      }
+
+      h3 + p {
+        margin-top: 6px;
+      }
+
+      p, blockquote, li {
         font-size: 22px;
-        line-height: 33px;
+        line-height: 34px;
+      }
+
+      blockquote {
+        font-style: italic;
+      }
+
+      p + p,
+      p + blockquote,
+      blockquote + p,
+      blockquote + blockquote {
+        margin-top: 29px;
       }
     </style>
   </head>
@@ -73,7 +107,8 @@
 
     <h3>Пространственная организация жилого комплекса</h3>
     <p>Пространство перед общественным корпусом композиционно выделялось квадратной площадкой, на которой планировалось разместить небольшое здание для детского сада. Все три объёма, различные по массам, строго ритмически уравновешенные, увязанные между собой, составляли композиционное ядро комплекса, сбалансированное в пространстве корпусом прачечной, ориентированным на Новинский бульвар. Перед прачечной также была устроена квадратная площадка, служившая своеобразным парадным пространством, связывающим комплекс с городом. Корпус прачечной так же, как и жилой дом, был частично поднят на колоннах, что освобождало для прохода пространство первого этажа. Пройдя под корпусом прачечной через «парадный двор» перед входом с Новинского бульвара, по диагональной аллее можно было попасть в общественную зону комплекса или по другой аллее через жилой корпус в уровне «открытого» первого этажа — в парк за домом, где была организована своеобразная видовая площадка.</p>
-    <p>Основной объём жилого дома Гинзбург расположил на территории двух усадебных садов, отмечая в пояснительной записке к проекту: «В виду неровности участка, вызывающего в подобных случаях устройство большой поверхности цоколя, в настоящем случае дом поднят в большей своей части на высоту 2,5 метров на отдельных столбах, что является более экономичным и, кроме того, сохраняет нетронутой площадь парка».</p>
+    <p>Основной объём жилого дома Гинзбург расположил на территории двух усадебных садов, отмечая в пояснительной записке к проекту:</p>
+    <blockquote>В виду неровности участка, вызывающего в подобных случаях устройство большой поверхности цоколя, в настоящем случае дом поднят в большей своей части на высоту 2,5 метров на отдельных столбах, что является более экономичным и, кроме того, сохраняет нетронутой площадь парка.</blockquote>
     <p>Функциональные характеристики будущего здания были определены техническим заданием, составленным <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D1%8E%D1%82%D0%B8%D0%BD,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%B8%D1%87">Николаем Милютиным</a>, который в указанные годы (1924—1929) исполнял обязанности наркома финансов РСФСР и выступал в качестве заказчика жилого комплекса. Сметная стоимость строительства составила 10 млн рублей.</p>
 
     <h3>Архитектура жилого дома</h3>
