--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
         background-repeat: no-repeat;
       }
 
+      /*  Хак для верстки  */
+
+      h1,
+      h2,
+      h3,
+      h1 + p {
+        letter-spacing: -0.1px;
+      }
+
+      p {
+        letter-spacing: -0.0px;
+      }
+
+      /*  Конец  */
+
       h1, h2, h3 {
         font-family: 'PT Sans Caption', sans-serif;
         font-weight: bold;
@@ -28,7 +43,6 @@
         line-height: 46px;
       }
       h1 + p {
-        margin: 0;
         font-family: 'PT Sans Caption', sans-serif;
         font-size: 22px;
         line-height: 32px;
@@ -36,19 +50,39 @@
       }
 
       h2 {
-        margin-top: 39px;
+        margin-top: 43px;
         font-size: 32px;
-        line-height: 46px;
+        line-height: 36px;
       }
 
       h2 + p {
-        margin-top: 39px;
+        margin-top: 7px;
       }
 
-      p {
-        margin-top: 30px;
+      h3 {
+        margin-top: 36px;
+        font-size: 28px;
+        line-height: 34px;
+      }
+
+      h3 + p {
+        margin-top: 6px;
+      }
+
+      p, blockquote, li {
         font-size: 22px;
-        line-height:  33px;
+        line-height:  34px;
+      }
+
+      blockquote {
+        font-style: italic;
+      }
+
+      p + p,
+      p + blockquote,
+      blockquote + p,
+      blockquote + blockquote {
+        margin-top: 29px;
       }
     </style>
   </head>
@@ -72,13 +106,13 @@
 
     <h3>Пространственная организация жилого комплекса</h3>
     <p>Пространство перед общественным корпусом композиционно выделялось квадратной площадкой, на которой планировалось разместить небольшое здание для детского сада. Все три объёма, различные по массам, строго ритмически уравновешенные, увязанные между собой, составляли композиционное ядро комплекса, сбалансированное в пространстве корпусом прачечной, ориентированным на Новинский бульвар. Перед прачечной также была устроена квадратная площадка, служившая своеобразным парадным пространством, связывающим комплекс с городом. Корпус прачечной так же, как и жилой дом, был частично поднят на колоннах, что освобождало для прохода пространство первого этажа. Пройдя под корпусом прачечной через «парадный двор» перед входом с Новинского бульвара, по диагональной аллее можно было попасть в общественную зону комплекса или по другой аллее через жилой корпус в уровне «открытого» первого этажа — в парк за домом, где была организована своеобразная видовая площадка</p>
-    <p>Основной объём жилого дома Гинзбург расположил на территории двух усадебных садов, отмечая в пояснительной записке к проекту: «В виду неровности участка, вызывающего в подобных случаях устройство большой поверхности цоколя, в настоящем случае дом поднят в большей своей части на высоту 2,5 метров на отдельных столбах, что является более экономичным и, кроме того, сохраняет нетронутой площадь парка»</p>
+    <p>Основной объём жилого дома Гинзбург расположил на территории двух усадебных садов, отмечая в пояснительной записке к проекту:<p>
+    <blockquote>«В виду неровности участка, вызывающего в подобных случаях устройство большой поверхности цоколя, в настоящем случае дом поднят в большей своей части на высоту 2,5 метров на отдельных столбах, что является более экономичным и, кроме того, сохраняет нетронутой площадь парка</blockquote>
     <p>Функциональные характеристики будущего здания были определены техническим заданием, составленным <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D1%8E%D1%82%D0%B8%D0%BD,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%B8%D1%87">Николаем Милютиным</a>, который в указанные годы (1924—1929) исполнял обязанности наркома финансов РСФСР и выступал в качестве заказчика жилого комплекса. Сметная стоимость строительства составила 10 млн рублей</p>
 
     <h3>Архитектура жилого дома</h3>
     <p>Подлинным новаторством для конца 1920-х годов была архитектура жилого корпуса. Она была настолько необычна и впечатляюща, что лишь немногие смогли увидеть в ней образ жилого дома будущего, черты которого он, безусловно, содержал.</p>
     <p>Жилой корпус представляет собой шестиэтажное здание длиной 85 м и высотой 17 м. Ориентация здания на запад и восток. В торцах здания расположены лестничные клетки, всего две на всю длину. Первый этаж, высотой 2,5 метра, состоит из круглых столбов — элементов каркаса здания, что было связано со стремлением сохранить парковую территорию и с убеждённостью Гинзбурга в том, что первые этажи менее пригодны для жилья.</p>
-    <p>За счет колонн первого этажа и открытого пространства между ними создавалось зрительное впечатление, что корпус как бы приподнят над землей. Это, вместе с надстройкой-мостиком на плоской крыше и белоснежным цветом фасадов, придавало ему сходство с кораблем, что и закрепилось в неофициальном названии дома — «дом-корабль» или, по Е. Милютиной, «дом-пароход».</p>
     <p>По второму и пятому этажам здания лестницы связаны широкими, около 4 м, коридорами, освещёнными с восточной стороны горизонтальными лентами окон. В квартиры жильцы попадают из этих коридоров.</p>
     <p>Дом был задуман как «коммунальный» с изолированными квартирами на 50 семей, общей численностью около 200 человек, и имеющимся общественным обслуживанием. В своем проекте авторы поставили задачу сохранения только социально-бытовых условий переходного типа (например, несмотря на наличие общей столовой, в квартирах сохранялись маленькие кухни)</p>
     <p>Весь шестиэтажный объём здания разбит по горизонтали на две части. Нижние три этажа отведены под квартиры большой площади, в которых должны были проживать семьи, сохранившие более полно свой старый бытовой уклад. Поэтому здесь имелась маленькая кухня, позволяющая индивидуально приготовлять пищу. Верхние три этажа занимают малометражные квартиры на одного или двух человек — так называемая ячейка Стройкома РСФСР тип «F». Все квартиры двухэтажные с входами из одного коридора пятого этажа. Квартиры имели две планировки: либо с лестницей от входа наверх (в двухэтажную гостиную со стеклянной стенкой) и опять наверх (в спальню), либо с длинной лестницей вниз, в такую же гостиную и спальню, расположенные на одном уровне. Таким образом каждая квартира состоит из двух частей. Одна часть её имеет высоту 3,6 м, другая — 2,3 м. Последняя представляет собой спальную нишу, она освещена прямым светом: имеется небольшая душевая кабина с умывальником. В каждой квартире есть отдельная передняя и туалет, расположенный у самого входа. В малометражных квартирах нет кухонь. Жилая комната оборудована небольшим «кухонным элементом» для индивидуального приготовления пищи. Площадь каждой ячейки составляет 33—34 м², но её кубатура благодаря многоярусной планировке соответствует кубатуре квартиры, в полтора раза большей по площади</p>
