--- a/narcomfin.html
+++ b/narcomfin.html
@@ -12,17 +12,17 @@
         width: 700px;
         margin: 0 auto;
         font-family: "PT Sans",sans-serif;
-        background-position: top center;
+        /*background-position: top center;
         background-image: url(dc-online-media-mockup.jpg);
         background-size: 800px 20624px;
         background-repeat: no-repeat;
-        letter-spacing: -0.5;
+        letter-spacing: -0.5;*/
       }
 
 
      /*Как  для  верстки*/
 
-        h1,
+        /*h1,
         h2,
         h3,
         h1+p{
@@ -31,7 +31,7 @@
 
         p{
           letter-spacing: -0.05px;
-        }
+        }*/
      /*конец хака*/
 
         h1, h2, h3{
@@ -46,6 +46,7 @@
         }
 
         h1+p{
+          margin-top: 14px;
           font-family: "PT Sans Caption", sans-serif;
           font-size: 22px;
           line-height: 32px;
@@ -77,7 +78,7 @@
         }
 
         p, blockquote, li{
-          
+
         }
 
         blockquote {
@@ -91,6 +92,17 @@
           margin-top: 29px;
         }
 
+        ul{
+          margin-left: 30px;
+        }
+
+        li{
+          margin: 29px 0 29px 30px;
+        }
+
+        a {
+          color:inherit;
+        }
 
         p {
           font-size: 22px;
