--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,15 +11,15 @@
       width: 700px;
       margin: 0 auto;
       font-family: 'PT Sans', sans-serif;
-      background-image: url(dc-online-media-mockup.jpg);
-      background-size: 800px 20624px;
+      /*background-image: url(dc-online-media-mockup.jpg);*/
+      /*background-size: 800px 20624px;
       background-position: top center;
-      background-repeat: no-repeat;
+      background-repeat: no-repeat;*/
     }
 
     /*Хак для верстки*/
 
-    h1,
+    /*h1,
     h2,
     h3,
     h1 + p {
@@ -29,7 +29,7 @@
 
     p {
       letter-spacing: -0.087px;
-    }
+    }*/
 
     /*Конец хака*/
 
@@ -47,6 +47,7 @@
     }
 
     h1 + p {
+      margin-top: 14px;
       font-family: 'PT Sans Caption', sans-serif;
       font-size: 22px;
       line-height: 32px;
@@ -97,11 +98,21 @@
       margin-top: 29px;
     }
 
+    ul {
+      margin: 29px 0 29px 30px;
+    }
 
+    li{
+      margin: 17px 0;
+    }
+
+    a {
+      color: inherit;
+    }
   </style>
 </head>
 <body>
-  <h1>Дом Наркомфина</h1>
+  <h1>Дом Наркомфина-жилой дом переходного типа</h1>
   <p>Жилой дом переходного типа, построенный в <a target="_blank" href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4">1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87">Моисея Гинзбурга</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%B8%D0%BD%D0%B8%D1%81,_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D0%B8%D0%B9_%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D0%B5%D0%B2%D0%B8%D1%87">Игнатия Милиниса</a> для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B9_%D0%BA%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B0%D1%82_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на Новинском бульваре по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)">конструктивизма</a>.</p>
   <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение»</p>
 
