--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,26 +11,7 @@
        width: 700px;
        margin: 0 auto;
        font-family: 'PT Sans', sans-serif;
-       background-image: url(dc-online-media-mockup.jpg);
-       background-size: 800px 20624px;
-       background-position: top center;
-       background-repeat: no-repeat;
      }
-
-       /*  Хак для верстки  */
-
-       h1,
-       h2,
-       h3,
-       h1 + p {
-         letter-spacing: -0.02px;
-       }
-
-       p {
-         letter-spacing: -0.05px;
-       }
-
-       /* Конец хака */
 
      h1, h2, h3 {
        font-family: 'PT Sans Caption', sans-serif;
@@ -44,6 +25,7 @@
      }
 
      h1 + p {
+       margin-top: 21px;
        font-family: 'PT Sans Caption', sans-serif;
        font-size: 22px;
        line-height: 32px;
@@ -80,22 +62,22 @@
      }
 
      li {
-       margin-left: 30px;
+       margin: 17px 0;
      }
 
      ul {
-       margin-top: 29px;
+       margin: 29px 0 29px 30px;
      }
 
      p + p,
      p + blockquote,
      blockquote + p,
      blockquote + blockquote {
-       margin-top: 29px;
+       margin-top: 39px;
      }
 
      a {
-       color: rgba(0, 0, 0, .5);
+       color: inherit;
      }
     </style>
   </head>
@@ -103,6 +85,7 @@
     <h1>Дом Наркомфина</h1>
     <p>Жилой дом переходного типа, построенный в <a target="_blank" href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4">1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87">Моисея Гинзбурга</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%B8%D0%BD%D0%B8%D1%81,_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D0%B8%D0%B9_%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D0%B5%D0%B2%D0%B8%D1%87">Игнатия Милиниса</a> для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B9_%D0%BA%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B0%D1%82_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)">конструктивизма</a>.</p>
     <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение».</p>
+    <img src="images/narkomfin.jpg" alt="Дом Наркомфина">
 
     <h2>История создания</h2>
     <p>Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга, в соавторстве с архитектором Игнатием Милинисом и инженером Сергеем Прохоровым. Ранее, в конце 1925 года была образована творческая организация конструктивистов, названная <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Объединением современных архитекторов</a> (ОСА). Эта организация оказала значительное влияние на развитие теоретической мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса.</p>
