--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,24 +11,7 @@
       width: 700px;
       margin: 0 auto;
       font-family: 'PT Sans', sans-serif;
-      background-image: url(dc-online-media-mockup.jpg);
-      background-size: 800px 20624px;
-      background-position: top center;
-      background-repeat: no-repeat;
 
-    }
-
-    /*  хак для верстки  */
-
-    /*h1,
-    h2,
-    h3,
-    h1 + p {
-      letter-spacing: -0.05px;
-    }*/
-
-    p {
-      letter-spacing: -0.05px;
     }
 
     /*  конец хака  */
@@ -45,6 +28,7 @@
     }
 
     h1 + p {
+      margin-top: 14px;
       font-family: 'PT Sans Caption', sans-serif;
       font-size: 22px;
       line-height: 32px;
@@ -76,7 +60,7 @@
       line-height: 34px;
     }
 
-  
+
     blockquote {
       font-style: italic;
     }
@@ -85,6 +69,18 @@
     blockquote + p,
     blockquote + blockquote {
       margin-top: 29px;
+    }
+
+    ul {
+      margin: 29px 0 29px 30px;
+    }
+
+    li {
+      margin: 17px 0;
+    }
+
+    a {
+      color: inherit;
     }
     </style>
 
