--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,10 +11,10 @@
         width: 700px;
         margin:0 auto;
         font-family: 'PT Sans', sans-serif;
-        background-image: url(dc-online-media-mockup.jpg);
+        /*background-image: url(dc-online-media-mockup.jpg);
         background-size: 800px 20624px;
         background-position: top center;
-        background-repeat: no-repeat;
+        background-repeat: no-repeat;*/
       }
       p {
         letter-spacing: -0.05px;
@@ -30,6 +30,7 @@
         line-height: 46px;
       }
       h1 + p {
+        margin-top: 14px;
         font-family: 'PT Sans Caption', sans-serif;
         font-size: 22px;
         line-height: 32px;
@@ -63,9 +64,18 @@
       p + blockquote,
       blockquote + p,
       blockquote + blockquote {
-          margin-top: 29px;
+        margin-top: 29px;
+      }
+      ul{
+        margin: 29px 0 29px 30px;
+      }
+      li {
+        margin:17px 0;
       }
 
+      a {
+        color: inherit;  
+      }
 
     </style>
   </head>
