--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,13 +11,13 @@
         width: 700px;
         margin: 0 auto;
         font-family: 'PT Sans', sans-serif;;
-        background-image: url(dc-online-media-mockup.jpg);
+        /*background-image: url(dc-online-media-mockup.jpg);
         background-size: 800px 20624px;
         background-position: top center;
-        background-repeat: no-repeat;
+        background-repeat: no-repeat;*/
       }
 
-      /*  Хак для верстки  */
+      /*  Хак для верстки
 
       h1,
       h2,
@@ -30,7 +30,7 @@
         letter-spacing: -0.0px;
       }
 
-      /*  Конец  */
+       Конец  */
 
       h1, h2, h3 {
         font-family: 'PT Sans Caption', sans-serif;
@@ -43,6 +43,7 @@
         line-height: 46px;
       }
       h1 + p {
+        margin-top: 14px;
         font-family: 'PT Sans Caption', sans-serif;
         font-size: 22px;
         line-height: 32px;
@@ -84,6 +85,17 @@
       blockquote + blockquote {
         margin-top: 29px;
       }
+      ul {
+        margin: 29px 0 29px 30px;
+      }
+      li {
+        margin: 17px 0;
+      }
+
+      a {
+        color: inherit;
+      }
+
     </style>
   </head>
   <body>
