--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,26 +11,8 @@
         width: 700px;
         margin: 0 auto;
         font-family: 'PT Sans', sans-serif;
-        background-image: url(dc-online-media-mockup.jpg);
-        background-size: 800px 20624px;
-        background-position: top center;
-        background-repeat: no-repeat;
+
         }
-
-      /*Хак для вёрстки*/
-
-      /*h1,
-      h2,
-      h3,
-      h1 + p {
-        letter-spacing: -0.5px;
-      }*/
-
-      p {
-        letter-spacing: -0.05px;
-      }
-
-      /*Конец хака*/
 
       h1, h2, h3 {
         font-family: 'PT Sans Caption', sans-serif;
@@ -44,6 +26,7 @@
       }
 
       h1 + p {
+        margin-top: 14px;
         font-family: 'PT Sans Caption', sans-serif;
         font-size: 22px;
         line-height: 32px;
@@ -70,7 +53,7 @@
         margin-top: 6px;
       }
 
-      p, blockquote {
+      p, blockquote, li {
         font-size: 22px;
         line-height: 34px;
       }
@@ -85,6 +68,17 @@
       blockquote + blockquote {
         margin-top: 29px;
       }
+      ul {
+        margin: 39px 0 29px 30px;
+      }
+      li {
+        margin: 17px 0;
+      }
+
+      a {
+        color: inherit;
+      }
+
       </style>
   </head>
   <body>
