--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,14 +11,15 @@
        width: 700px;
        margin: 0 auto;
        font-family: 'PT sans',sans-serif;
-      background-image: url(dc-online-media-mockup.jpg);
+      /*background-image: url(dc-online-media-mockup.jpg);
       background-size: 800px 20624px;
       background-position: top center;
       background-repeat: no-repeat;
+      letter-spacing: -0,5px*/
 
      }
 
-     h1, h2, h3 {
+     /*h1, h2, h3 {
        font-family: 'PT sans Caption', sans-serif;
        font-weight: bold;
      }
@@ -40,6 +41,7 @@
 
      /*  конец хака  */
 
+
      h1 {
         margin-top: 66px;
         font-size: 40px;
@@ -47,6 +49,7 @@
      }
 
      h1 + p {
+       margin-top: 14px;
        font-family: 'PT sans Caption', sans-serif;
        font-size: 22px;
        line-height: 32px;
@@ -89,9 +92,17 @@
        margin-top: 29px;
      }
 
+     ul {
+       margin: 29px 0 29px 30px;
+     }
 
+     li{
+       margin: 17px 0;
+     }
 
-
+     a {
+       color: inherit;
+     }
 
     </style>
   </head>
